added pip libraries install step

--- a/db_no_sql.ipynb
+++ b/db_no_sql.ipynb
@@ -9,8 +9,31 @@
     }
    },
    "source": [
-    "Import Libraries"
+    "Install libraries"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "!pip install pandas==1.2.4 dnspython==2.1.0 pymongo==3.11.4"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Import Libraries"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "code",
