--- a/db_sql.ipynb
+++ b/db_sql.ipynb
@@ -9,12 +9,35 @@
     }
    },
    "source": [
-    "Import Libraries"
+    "Install libraries"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "!pip install pandas==1.2.4 mysql-connector-python==8.0.25"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Import Libraries"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import datetime\n",
